--- a/BioDatabaseService/BioData/BioData.csproj
+++ b/BioDatabaseService/BioData/BioData.csproj
@@ -9,10 +9,25 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BioData</RootNamespace>
     <AssemblyName>BioData</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>a01789a3</NuGetPackageImportStamp>
     <TargetFrameworkProfile />
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -92,13 +107,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataModels\AccessDevice.cs" />
-    <Compile Include="DataModels\BioSkyNetDataModel.cs" />
-    <Compile Include="DataModels\CaptureDevice.cs" />
-    <Compile Include="DataModels\Card.cs" />
     <Compile Include="DataHolders\AccessDeviceDataHolder.cs" />
     <Compile Include="DataHolders\CaptureDeviceDataHolder.cs" />
     <Compile Include="DataHolders\CardDataHolder.cs" />
+    <Compile Include="DataHolders\DataClient\AccessDeviceDataClient.cs" />
+    <Compile Include="DataHolders\DataClient\CaptureDeviceDataClient.cs" />
+    <Compile Include="DataHolders\DataClient\CardDataClient.cs" />
+    <Compile Include="DataHolders\DataClient\LocationDataClient.cs" />
+    <Compile Include="DataHolders\DataClient\PersonAccessDataClient.cs" />
+    <Compile Include="DataHolders\DataClient\PersonDataClient.cs" />
+    <Compile Include="DataHolders\DataClient\PhotoDataClient.cs" />
+    <Compile Include="DataHolders\DataClient\VisitorDataClient.cs" />
     <Compile Include="DataHolders\DataHolderBase.cs" />
     <Compile Include="DataHolders\Grouped\FullLocationHolder.cs" />
     <Compile Include="DataHolders\Grouped\FullPersonHolder.cs" />
@@ -109,16 +128,25 @@
     <Compile Include="BioDataInstaller.cs" />
     <Compile Include="BioSkyNetRepository.cs" />
     <Compile Include="DataHolders\PersonDataHolder.cs" />
+    <Compile Include="DataModels\AccessDevice.cs" />
+    <Compile Include="DataModels\BiometricLocation.cs" />
+    <Compile Include="DataModels\BioSkyNetDataModel.cs" />
+    <Compile Include="DataModels\CaptureDevice.cs" />
+    <Compile Include="DataModels\Card.cs" />
+    <Compile Include="DataModels\Criminal.cs" />
+    <Compile Include="DataModels\EyesCharacteristic.cs" />
+    <Compile Include="DataModels\FaceCharacteristic.cs" />
     <Compile Include="DataModels\Location.cs" />
     <Compile Include="DataModels\Person.cs" />
+    <Compile Include="DataModels\PersonAccess.cs" />
     <Compile Include="DataModels\Photo.cs" />
+    <Compile Include="DataModels\PortraitCharacteristic.cs" />
+    <Compile Include="DataModels\Visitor.cs" />
     <Compile Include="Utils\BioConnectionBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DataModels\Visitor.cs" />
     <Compile Include="Utils\ProtoMessageConvertor.cs" />
     <Compile Include="Utils\Utils.cs" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <None Include="App.Config" />
     <None Include="packages.config" />
@@ -132,6 +160,24 @@
       <Name>BioContracts</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.5">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.5 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\grpc.dependencies.zlib.redist.1.2.8.10\build\portable-net45+netcore45+wpa81+wp8\grpc.dependencies.zlib.redist.targets" Condition="Exists('..\packages\grpc.dependencies.zlib.redist.1.2.8.10\build\portable-net45+netcore45+wpa81+wp8\grpc.dependencies.zlib.redist.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
